# simple_shop

./: README.md  pyproject.toml
mysite/: .env  .gitignore
mysite/api/: apps.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
mysite/cart/: models.py  utils.py
mysite/cart/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cart_user_order.py  0004_alter_productincart_product.py  0005_order_final_amount.py  0006_alter_order_promo_code.py  0007_notificationperiod_order_execution_date_and_more.py  0008_alter_notificationperiod_minutes.py
mysite/mysite/: celery.py  settings.py  urls.py
mysite/root/: apps.py  serializers.py  signals.py  urls.py  views.py
mysite/shop/: admin.py  forms.py  models.py  urls.py  views.py
mysite/shop/migrations/: 0001_initial.py  0002_product_discount.py  0002_promocode_works_with_discount.py  0003_rename_promocode_promocode_promo_code.py  0004_alter_user_email.py
mysite/shop/templates/shop/: index.html  login.html
mysite/templates/: base.html
mysite/templates/inc/: _nav.html
